--- a/public/style.css
+++ b/public/style.css
@@ -44,11 +44,11 @@ body{
 }
 
 h2{
-    font-size: 36px;
+    font-size: 34px;
 }
 
 p{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
 }
 
@@ -60,28 +60,28 @@ p{
     
 }
 
-#workcard:hover{
+.workcard_main:hover{
     background-color: rgb(58, 58, 58);
     border-radius: 12px;
 }
 
 h3{
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 500;
 }
 
 h4{
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 500;
 }
 
 h5{
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 400;
 }
 
 #parasmall{
-    font-size: 15px;
+    font-size: 13px;
 }
 
 .srvhead{
@@ -96,13 +96,21 @@ h5{
     gap: 14px;
 }
 
-#buttonnormal{
+.buttonnormal{
     padding: 10px;
     background-color: #414040;
     border-radius: 12px;
     font-size: 16px;
     border: 0px;
     color: #FFFFFF;
+    transition: background-color .50s ease-in-out;
+}
+
+
+#hovereffect:hover{
+    background-color: rgb(114, 114, 114);
+    padding: 11px;
+    cursor: pointer;
 }
 
 .workcard_right_down{
@@ -189,11 +197,6 @@ a{
     background-color: rgb(114, 114, 114);
 }
 
-#buttonnormal:hover{
-    background-color: rgb(114, 114, 114);
-    padding: 11px;
-}
-
 .navbar_line{
     border: 1px solid #C7C5C5;
 }
@@ -203,7 +206,7 @@ a{
     border-radius: 12px 0px 0px 12px;
     padding: 10px;
     position: fixed;
-    top: 40%;
+    top: 42%;
     right: 0;
     display: flex;
     flex-direction: column;
@@ -292,12 +295,17 @@ a{
 
     .app{
         width: 100%;
+        padding: 10px;
     }
 
     .workcard_left{
         img{
-            width: 330px;
+            width: 315px;
         }
+    }
+
+    h2{
+        font-size: 28px;
     }
 }
 
