--- a/public/style.css
+++ b/public/style.css
@@ -271,7 +271,7 @@ a{
     margin-left: -30px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
 
     #root{
         gap: 0;
@@ -307,6 +307,60 @@ a{
     h2{
         font-size: 28px;
     }
+
+    h3{
+        font-size: 28px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+
+    h5{
+        font-size: 23px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+    #root{
+        gap: 0;
+    }
+
+    body{
+        padding: 10px;
+    }
+
+    .navbar{
+        display: none;
+    }
+
+    .workcard_right_down{
+        gap: 15px;
+    }
+
+    .app{
+        width: 100%;
+        padding: 10px;
+    }
+
+    h2{
+        font-size: 28px;
+    }
+
+    h3{
+        font-size: 28px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+
+    h5{
+        font-size: 23px;
+    }
+
+
 }
 
 
