--- a/public/style.css
+++ b/public/style.css
@@ -319,6 +319,10 @@ a{
     h5{
         font-size: 23px;
     }
+
+    p{
+        font-size: 13px;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -358,6 +362,10 @@ a{
 
     h5{
         font-size: 23px;
+    }
+
+    p{
+        font-size: 13px;
     }
 
 
