--- a/public/style.css
+++ b/public/style.css
@@ -271,107 +271,6 @@ a{
     margin-left: -30px;
 }
 
-@media only screen and (max-width: 767px) {
-
-    #root{
-        gap: 0;
-    }
-
-    body{
-        padding: 10px;
-    }
-
-    .navbar{
-        display: none;
-    }
-
-    #workcard{
-        flex-direction: column;
-    }
-
-    .workcard_right_down{
-        gap: 15px;
-    }
-
-    .app{
-        width: 100%;
-        padding: 10px;
-    }
-
-    .workcard_left{
-        img{
-            width: 315px;
-        }
-    }
-
-    h2{
-        font-size: 28px;
-    }
-
-    h3{
-        font-size: 28px;
-    }
-
-    h4{
-        font-size: 20px;
-    }
-
-    h5{
-        font-size: 23px;
-    }
-
-    p{
-        font-size: 13px;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-
-    #root{
-        gap: 0;
-    }
-
-    body{
-        padding: 10px;
-    }
-
-    .navbar{
-        display: none;
-    }
-
-    .workcard_right_down{
-        gap: 15px;
-    }
-
-    .app{
-        width: 100%;
-        padding: 10px;
-    }
-
-    h2{
-        font-size: 28px;
-    }
-
-    h3{
-        font-size: 28px;
-    }
-
-    h4{
-        font-size: 20px;
-    }
-
-    h5{
-        font-size: 23px;
-    }
-
-    p{
-        font-size: 13px;
-    }
-
-
-}
-
-
 .image-stack {
     position: relative;
     height: 100px;
@@ -419,4 +318,144 @@ a{
     opacity: 1;
   }
   
+  
+/* newNavbar */
+
+.newnavbar{
+    display: none;
+    position: fixed;
+    bottom: 7%;
+    right: 5%;
+}
+
+.cJAemB{
+    border: 0 !important;
+    background-color: black !important;
+    color: white !important;
+  }
+  
+  .cJACow{
+    background-color: white !important;
+  }
+  
+  button:focus, button:focus-visible{
+    outline: none !important;
+  }
+  
+  button:hover{
+    background-color: lightgray !important;
+  }
+
+
+@media only screen and (max-width: 767px) {
+
+    #root{
+        gap: 0;
+    }
+
+    body{
+        padding: 10px;
+    }
+
+    .navbar{
+        display: none;
+    }
+
+    #workcard{
+        flex-direction: column;
+    }
+
+    .workcard_right_down{
+        gap: 15px;
+    }
+
+    .app{
+        width: 100%;
+        padding: 10px;gap: 40px;
+    }
+
+    .workcard_left{
+        img{
+            width: 315px;
+        }
+    }
+
+    h2{
+        font-size: 28px;
+    }
+
+    h3{
+        font-size: 28px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+
+    h5{
+        font-size: 23px;
+    }
+
+    p{
+        font-size: 13px;
+    }
+
+    .newnavbar{
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+    #root{
+        gap: 0;
+    }
+
+    body{
+        padding: 10px;
+    }
+
+    .navbar{
+        display: none;
+    }
+
+    .workcard_right_down{
+        gap: 15px;
+    }
+
+    .app{
+        width: 100%;
+        padding: 20px;
+        gap: 40px;
+    }
+
+    h2{
+        font-size: 28px;
+    }
+
+    h3{
+        font-size: 28px;
+    }
+
+    h4{
+        font-size: 20px;
+    }
+
+    h5{
+        font-size: 23px;
+    }
+
+    p{
+        font-size: 13px;
+    }
+
+    .newnavbar{
+        display: block;
+    }
+
+
+}
+
+
+
   
