--- a/public/style.css
+++ b/public/style.css
@@ -343,7 +343,11 @@ a{
   }
   
   button:hover{
-    background-color: lightgray !important;
+    background-color: rgb(19, 19, 19) !important;
+  }
+
+  .blSUxs{
+    background-color: black !important;
   }
 
 
