--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+
 }
 
 body{
@@ -19,7 +20,7 @@ body{
 .app{
     display: flex;
     flex-direction: column;
-    gap: 110px;
+    gap: 70px;
     width: 997px;
     top: 27px;
     border-radius: 12px;
@@ -211,7 +212,13 @@ a{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+  
 
 .contact_para{
     font-size: 12px;
@@ -381,7 +388,7 @@ a{
 
     .workcard_left{
         img{
-            width: 315px;
+            width: 100%;
         }
     }
 
