--- a/public/style.css
+++ b/public/style.css
@@ -349,7 +349,7 @@ html {
     outline: none !important;
   }
   
-  button:hover{
+  .cJAemB:hover{
     background-color: rgb(19, 19, 19) !important;
   }
 
