--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ body{
     border-radius: 12px;
     background-color: #212121;
     padding: 20px;
-    margin: 0 auto;
+    margin: 0 12%;
 
     
 }
@@ -384,7 +384,9 @@ html {
 
     .app{
         width: 100%;
-        padding: 10px;gap: 40px;
+        padding: 10px;
+        gap: 40px;
+        margin: 0 auto;
     }
 
     .workcard_left{
@@ -442,8 +444,9 @@ html {
 
     .app{
         width: 100%;
-        padding: 20px;
+        padding: 10px;
         gap: 40px;
+        margin: 0 auto;
     }
 
     h2{
