--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
+    margin: 0 250px;
 }
 
 body{
@@ -21,7 +21,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 70px;
-    width: 900px;
+    width: 100%;
     top: 27px;
     border-radius: 12px;
     background-color: #212121;
@@ -206,12 +206,11 @@ a{
     border-radius: 12px 0px 0px 12px;
     padding: 10px;
     position: fixed;
-    top: 42%;
+    bottom: 0;
     right: 0;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    
+    gap: 10px;    
 }
 
 html {
@@ -361,6 +360,7 @@ html {
 
     #root{
         gap: 0;
+        margin: 0;
     }
 
     body{
@@ -424,6 +424,7 @@ html {
 
     #root{
         gap: 0;
+        margin: 0;
     }
 
     body{
@@ -475,7 +476,18 @@ html {
 
 }
 
+@media only screen and (max-width: 1620) {
 
+    #root{
+        display: flex;
+        justify-content: center;
+    }
+
+.app{
+    margin: auto;
+}
+
+}
 
 
   
