--- a/public/style.css
+++ b/public/style.css
@@ -10,10 +10,11 @@
 }
 
 body{
-    background-color: #000000;
-    color: #FFFFFF;
+    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url('../src/assets/bg.jpg') no-repeat center center;
+    background-size: cover;
     font-family: "Inter", sans-serif;
     padding: 20px;
+    background-attachment: fixed;
 }
 
 .app{
@@ -23,9 +24,10 @@ body{
     width: 100%;
     top: 27px;
     border-radius: 12px;
-    background-color: #212121;
+    background-color: #FFFFFF;
     padding: 20px;
-    
+    box-shadow: 0px 0px 14.5px 2px #5C837480;
+    overflow: auto;
 }
 
 
@@ -43,11 +45,13 @@ body{
 
 h2{
     font-size: 34px;
+    color: #5C8374;
 }
 
 p{
     font-size: 16px;
     font-weight: 400;
+    color: #6F6F6F;
 }
 
 #workcard{
@@ -59,27 +63,76 @@ p{
 }
 
 .workcard_main:hover{
-    background-color: rgb(58, 58, 58);
+    background-color: #bdcbc6;
     border-radius: 12px;
 }
 
 h3{
     font-size: 30px;
     font-weight: 500;
+    color: #5C8374;
 }
 
 h4{
     font-size: 22px;
     font-weight: 500;
+    color: #5C8374;
+
 }
 
 h5{
     font-size: 26px;
     font-weight: 400;
+    color: #5C8374;
+
+}
+
+h6{
+    font-size: 24px;
+    color: #5C8374;
+    font-weight: 500;
 }
 
 #parasmall{
     font-size: 13px;
+    color: #6F6F6F;
+}
+
+.process{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img{
+        margin-bottom: 20px;
+        width: 73px;
+        height: 73px;
+    }
+}
+
+.process_cont2{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+.process_cont1{
+    display: flex;
+    justify-content: center;
+}
+
+.designprocess{
+    display: flex;
+    flex-direction: column;
+    gap: 51px;
+}
+
+.designprocess_cont2{
+    display: flex;
+    flex-direction: row;
+    gap: 23px;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 
 .srvhead{
@@ -96,20 +149,21 @@ h5{
 
 .buttonnormal{
     padding: 10px;
-    background-color: #414040;
+    background-color: #FFFFFF;
     border-radius: 12px;
     font-size: 16px;
     border: 0px;
-    color: #FFFFFF;
-    transition: transform .5s, background-color 1.3s, color 1.9s;
-
+    color: #5C8374;
+    transition: transform .2s, background-color 0.5s, color .5s;
+    box-shadow: 0px 4px 110px 0px #00000060;
 }
 
 
 #hovereffect:hover{
-    background-color: rgb(114, 114, 114);
-    padding: 11px;
+    background-color: #d1d1d1;
+    border: 1px solid #1B4242;
     cursor: pointer;
+    color: #FFFFFF;
 }
 
 .workcard_right_down{
@@ -132,7 +186,7 @@ h5{
     border: 1px solid #C7C5C5;
     border-radius: 8px;
     padding: 12px;
-    background-color: #414040;
+    background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -153,11 +207,11 @@ h5{
 
 a{
     text-decoration: none;
-    color: #FFFFFF;
+    color: #5C8374;
 }
 
 .buttonicon{
-    background-color: #414040;
+    background-color: #FFFFFF;
     padding: 10px;
     border-radius: 12px;
     height: 22px;
@@ -168,10 +222,16 @@ a{
     justify-content: center;
 }
 
-.contact_button{
+.buttonrow{
     display: flex;
     flex-direction: row;
     gap: 15px;
+}
+
+svg{
+    width: 23px;
+    height: 23px;
+    color: #5C8374;
 }
 
 .contact{
@@ -193,7 +253,18 @@ a{
 }
 
 .buttonicon:hover{
-    background-color: rgb(114, 114, 114);
+    background-color: #bdcbc6;
+    svg{
+        color: #1B4242;
+    }
+}
+
+.button_shadow{
+    box-shadow: 0px 4px 110px 0px #00000060;
+}
+
+.button_shadow:hover{
+    border: 1px solid #1B4242;
 }
 
 .navbar_line{
@@ -201,15 +272,17 @@ a{
 }
 
 .navbar{
-    background-color: #212121;
-    border-radius: 12px 0px 0px 12px;
+    background-color: #FFFFFF;
+    border-radius: 12px 0px 0px 0px;
     padding: 10px;
     position: fixed;
     bottom: 0;
     right: 0;
     display: flex;
     flex-direction: column;
-    gap: 10px;    
+    gap: 10px;
+    box-shadow: 0px 0px 14.5px 2px #00000040;
+    
 }
 
 html {
@@ -222,6 +295,12 @@ html {
     display: flex;
     gap: 5px;
     align-items: center;
+}
+
+.workcard_left{
+    img{
+        height: 100%;
+    }
 }
 
 .navbar_top , .contactnew{
@@ -244,7 +323,7 @@ html {
 }
 
 .link:hover{
-    color: #939393;
+    color: #1B4242;
 }
 
 .contact_data{
@@ -334,9 +413,15 @@ html {
 
 .cJAemB{
     border: 0 !important;
-    background-color: black !important;
-    color: white !important;
+    background-color: #1B4242 !important;
+    svg{
+        color: white !important;
+    }
   }
+
+.inyBfv{
+    background-color: #1B4242 !important;
+}
   
   .cJACow{
     background-color: white !important;
@@ -347,11 +432,11 @@ html {
   }
   
   .cJAemB:hover{
-    background-color: rgb(19, 19, 19) !important;
+    background-color: #1B4242 !important;
   }
 
   .blSUxs{
-    background-color: black !important;
+    background-color: #1B4242 !important;
   }
 
 
@@ -416,6 +501,18 @@ html {
 
     .alignpara{
         text-align: justify;
+    }
+
+    .process{
+        img{
+            width: 50px;
+            height: 50px;
+        }
+    }
+
+    .designprocess_cont2{
+        flex-direction: column;
+        align-items: center;
     }
 }
 
