--- a/public/style.css
+++ b/public/style.css
@@ -438,6 +438,10 @@ html {
   .blSUxs{
     background-color: #1B4242 !important;
     border: 0.2rem solid #1B4242 !important;
+
+    a{
+        color: #FFFFFF !important;
+    }
   }
 
 @media only screen and (max-width: 767px) {
