--- a/public/style.css
+++ b/public/style.css
@@ -10,12 +10,13 @@
 }
 
 body{
-    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("../src/assets/bg.jpg") no-repeat center center;
+    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("/src/assets/bg.jpg") no-repeat center center;
     background-size: cover;
     font-family: "Inter", sans-serif;
     padding: 20px;
     background-attachment: fixed;
 }
+
 
 .app{
     display: flex;
