--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("./src/assets/bg.jpg") no-repeat center center;
+    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("../src/assets/b2b.png") no-repeat center center;
     background-size: cover;
     font-family: "Inter", sans-serif;
     padding: 20px;
@@ -103,6 +103,7 @@ h6{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* box-shadow: 0px 4px 120px 0px #00000040; */
     img{
         margin-bottom: 20px;
         width: 73px;
@@ -369,7 +370,6 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    transition: opacity 0.5s ease-in-out; 
   }
 
   
@@ -379,28 +379,11 @@ html {
   
   .second-image {
   z-index: 1; 
-  opacity: 0; 
   margin-left: 70px; 
 }
-
-  
-  .image-container:hover .second-image {
-    opacity: 1; 
-  }
-
   .third-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0; 
-    opacity: 0; 
-    transition: opacity 0.3s ease-in-out; 
     margin-left: 150px;
-  }
-  
-  .image-container:hover .third-image {
-    opacity: 1;
-  }
+  }  
   
   
 /* newNavbar */
