--- a/public/style.css
+++ b/public/style.css
@@ -9,14 +9,13 @@
     margin: 0 200px;
 }
 
-body {
-    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("../assets/bg.jpg") no-repeat center center;
+body{
+    background: linear-gradient(rgba(255, 255, 255, 0.592), rgba(255, 255, 255, 0.614)), url("../src/assets/bg.jpg") no-repeat center center;
     background-size: cover;
     font-family: "Inter", sans-serif;
     padding: 20px;
     background-attachment: fixed;
 }
-
 
 
 .app{
