--- a/public/style.css
+++ b/public/style.css
@@ -103,7 +103,11 @@ h6{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* box-shadow: 0px 4px 120px 0px #00000040; */
+    box-shadow: 0px 4px 120px 0px #00000040;
+    width: 185px;
+    height: 240px;
+    padding: 10px;
+    border-radius: 12px;
     img{
         margin-bottom: 20px;
         width: 73px;
