--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ p{
 }
 
 .workcard_main:hover{
-    background-color: #bdcbc6;
+    background-color: #e7f3ee;
     border-radius: 12px;
 }
 
@@ -102,7 +102,6 @@ h6{
 .process{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     box-shadow: 0px 5px 15px 1px #00000025;
     width: 185px;
     height: 240px;
@@ -166,7 +165,7 @@ h6{
 
 
 #hovereffect:hover{
-    background-color: #d1d1d1;
+    background-color: #e3e2e2;
     border: 1px solid #1B4242;
     cursor: pointer;
     color: #FFFFFF;
@@ -259,7 +258,7 @@ a{
 }
 
 .buttonicon:hover{
-    background-color: #bdcbc6;
+    background-color: #cbd8d4;
     svg{
         color: #1B4242;
     }
