--- a/public/style.css
+++ b/public/style.css
@@ -471,10 +471,12 @@ html {
     .workcard_left{
         img{
             width: 100%;
+            height: 100%;
         }
 
         video{
             width: 100%;
+            height: 100%;
         }
     }
 
