--- a/public/style.css
+++ b/public/style.css
@@ -312,7 +312,6 @@ html {
     video{
         width: 464px;
         height: 344px;
-        object-fit: cover;
     }
 }
 
@@ -476,7 +475,7 @@ html {
 
         video{
             width: 100%;
-            height: 100%;
+            height: 103%;
         }
     }
 
@@ -497,7 +496,7 @@ html {
     }
 
     p{
-        font-size: 14.5px;
+        font-size: 10.5px;
     }
 
     .newnavbar{
@@ -513,11 +512,17 @@ html {
             width: 50px;
             height: 50px;
         }
+        width: 135px;
+        height: 200px;
     }
 
     .designprocess_cont2{
-        flex-direction: column;
-        align-items: center;
+        flex-wrap: wrap;
+        gap: 15px;
+    }
+
+    h6{
+        font-size: 20px;
     }
 }
 
