--- a/public/style.css
+++ b/public/style.css
@@ -303,17 +303,14 @@ html {
     align-items: center;
 }
 
-.workcard_left{
-    img{
-        width: 464px;
-        height: 344px;
-    }
-
-    video{
-        width: 464px;
-        height: 344px;
-    }
+.workcard_left img,
+.workcard_left video {
+    width: 464px;
+    height: 344px;
+    object-fit: contain;
+    transition: opacity 0.3s ease;
 }
+
 
 .navbar_top , .contactnew{
     display: flex;
@@ -396,7 +393,6 @@ html {
   }  
   
   
-/* newNavbar */
 
 .newnavbar{
     display: none;
@@ -475,7 +471,7 @@ html {
 
         video{
             width: 100%;
-            height: 103%;
+            height: 100%;
         }
     }
 
