--- a/public/style.css
+++ b/public/style.css
@@ -307,9 +307,11 @@ html {
 .workcard_left video {
     width: 464px;
     height: 344px;
-    object-fit: contain;
+    object-fit: cover;
     transition: opacity 0.3s ease;
 }
+
+
 
 
 .navbar_top , .contactnew{
@@ -472,6 +474,7 @@ html {
         video{
             width: 100%;
             height: 100%;
+            object-fit: contain;
         }
     }
 
